Fixed Realtime Column Overflow Bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,6 +117,8 @@ a:hover {
     }
 }
 
+html {}
+
 body {
     margin: 0;
     padding: 0;
@@ -124,6 +126,8 @@ body {
     color: var(--text-color);
     background: var(--white-color);
     overflow-anchor: auto;
+    --font-size: 16px;
+    font-size: var(--font-size);
 }
 
 .input-wrapper {
